cleaning small details

--- a/adminCreateQ.html
+++ b/adminCreateQ.html
@@ -47,11 +47,9 @@
     <div class="modal fade bd-example-modal-lg" id="questionModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-
                 <div class="modal-header">
                     <h1 class="modal-title"></h1>
                     <div class="modal-body">
-
                         <div class="form-group">
                             <label class="control-label" for="question">Question</label>
                             <textarea type="textarea" class="form-control" id="question" placeholder="Question"></textarea>
@@ -74,16 +72,16 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-default" id="addQuestionBtn">+ Add question</button>
-                        <button class="btn btn-default" id="saveQuizBtn">Finish quiz!</button>
+                        <button class="btn btn-default" id="newQuestionBtn">+ Add question</button>
+                        <button class="btn btn-default" id="saveBtn">Finish quiz!</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div><h1></h1></div>
 
+<div><h1></h1></div>
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
