--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>DøkQuiz</title>
+    <title>DØKquiz</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
