--- a/user.html
+++ b/user.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <meta charset="UTF-8">
     <title>User</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand">DØKquiz</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="user.html">Profile</a></li>
-                <li><a href="userCourse.html"><b>Quiz!</b></a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="logOut-button">Log out</a></li>
-            </ul>
-        </div>
+    <div class="navbar-header">
+        <a class="navbar-brand">DØKquiz</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="user.html">Profile</a></li>
+            <li><a href="userCourse.html"><b>Quiz!</b></a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" id="logOutBtn">Log out</a></li>
+        </ul>
     </div>
 </nav>
 
@@ -39,7 +34,7 @@
 </div>
 
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
