--- a/userCourse.html
+++ b/userCourse.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <meta charset="UTF-8">
     <title>Take Quiz!</title>
 </head>
 <body>
@@ -21,7 +18,7 @@
                 <li class="active"><a href="userCourse.html"><b>Quiz!</b></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="logOut-button">Log out</a></li>
+                <li><a href="#" id="logOutBtn">Log out</a></li>
             </ul>
         </div>
     </div>
@@ -34,7 +31,7 @@
 </div>
 
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
