--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -18,7 +18,7 @@
                 <li class="active"><a href="userCourse.html"><b>Quiz!</b></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="logOut-button">Log out</a></li>
+                <li><a href="#" id="logOutBtn">Log out</a></li>
             </ul>
         </div>
     </div>
@@ -28,7 +28,7 @@
     <h1 class="page-header"></h1>
     <h4 class="description"></h4>
     <div class="jumbotron">
-        <table class="table table-striped table-hover" id="questionHead">
+        <table class="table">
             <tbody id="QuestionList"></tbody>
         </table>
         <div class="modal-footer">
@@ -38,7 +38,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="container">
     <div class="modal fade bd-example-modal-lg" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
