commented on the code

--- a/adminCreateQ.html
+++ b/adminCreateQ.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-default" id="newQuestionBtn">+ Add question</button>
+                        <button class="btn btn-default" id="addQuestionBtn">Add this question</button>
                         <button class="btn btn-default" id="saveBtn">Finish quiz!</button>
                     </div>
                 </div>
