--- a/userQuiz.html
+++ b/userQuiz.html
@@ -41,6 +41,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/userQuiz.js"></script>
+<script src="js/user.js"></script>
 
 </body>
 </html>
