--- a/userCourse.html
+++ b/userCourse.html
@@ -38,6 +38,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/userCourse.js"></script>
+<script src="js/user.js"></script>
 
 </body>
 </html>
