--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -85,6 +85,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/userTakeQuiz.js"></script>
+<script src="js/user.js"></script>
 
 </body>
 </html>
